--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "npm run lint && npm run test && tsc && echo \"\\033[31m--------\";date \"+%H:%M:%S\n--------\" && echo \"\\033[00m\" && echo \"\\033[32mtypescript compiled successfully !!!\" ",
+        "build": "npm run lint && npm run test && tsc && echo \"\\033[31m--------\";date \"+%H:%M:%S\n--------\" && echo \"\\033[00m\"",
         "test": "jest --verbose",
         "lint": "eslint 'src/**/*.{ts,js,tsx,jsx}'",
         "pub": "git push && git push --tags && npm publish"
