--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "include": ["src"],
     "exclude": ["node_modules"],
     "compilerOptions": {
+        "plugins": [{ "name": "typescript-tslint-plugin" }],
         /* Basic Options */
         // "incremental": true,                   /* Enable incremental compilation */
         "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
@@ -27,7 +28,7 @@
 
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
-        // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+        "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
         // "strictNullChecks": true,              /* Enable strict null checks. */
         // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
         // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
