--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mini-utils",
+    "name": "mini-utils-ts",
     "version": "1.0.0",
     "description": "mini 系列 js 工具库 🍤🐷💘 a javascript utils library includes my  frequently used functions",
     "main": "dist/index.js",
